# DevDex

./: .env.example  .gitignore  DEMO_SCRIPT.md  LICENSE  README.md  pyproject.toml
branding/: logo-greatball.txt  logo-masterball.txt  logo-pokeball.txt  logo-ultraball.txt
configs/: devdex-workflow.yml
devdex/: __init__.py  __main__.py  cli.py  config.py  models.py
devdex/functions/: appstore_gen.py  checklist_gen.py  codebase_scanner.py  deployment_guide.py  feedback_loop.py  finetune_pipeline.py  ios_scanner.py  landing_page_gen.py  landing_page_html_gen.py  privacy_policy_gen.py  project_interviewer.py  register.py  sdk_database.py  tos_gen.py  vector_store.py
devdex/prompts/: appstore.py  checklist.py  landing_page.py  privacy_policy.py  terms_of_service.py
templates/: landing_page_base.html  support_page_base.html
